[fix] Form: align label of group to left (large screen) or right (small screen), when [float-end] is used [fix] Extractions: change color of link in black

--- a/src/theme/_responsive.scss
+++ b/src/theme/_responsive.scss
@@ -309,6 +309,11 @@ $screen-xl: 1200px;
   }
 }
 
+form ion-col>ion-label[float-center],
+form ion-col>ion-label[float-end] {
+  text-align: end !important;
+}
+
 // --------------------------------------------------
 // Custom usefull CSS style
 // --------------------------------------------------
